# privite-project

./: .gitignore  readme.md
.github/workflows/: play.yml
Back/: agent관련 백프론트 연동.md  db.py  dockerfile  main.py  pyproject.toml  settings.py
Back/agents/: graph.py  schemas.py  tools.py
Front/: default.conf  index.html  package-lock.json  package.json  vite.config.js
Front/src/: App.jsx  index.css
Front/src/components/: Header.jsx  PostDetail.jsx  PostForm.jsx  PostList.jsx
Front/src/services/: api.js
