[project]
name = "back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.28",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.6",
    "mariadb>=1.1.14",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.13.1",
    "pymysql>=1.1.2",
    "sqlalchemy>=2.0.49",
]
